--- a/SmartLibrary/Views/Pages/BluetoothSettings.xaml
+++ b/SmartLibrary/Views/Pages/BluetoothSettings.xaml
@@ -89,7 +89,7 @@
             Margin="0,12,0,0"
             Background="{ui:ThemeResource ControlFillColorDefaultBrush}"
             CornerRadius="8">
-            <ListView
+            <ui:ListView
                 d:ItemsSource="{d:SampleData ItemCount=6}"
                 IsEnabled="{Binding ViewModel.ListviewEnabled, Mode=OneWay}"
                 ItemsSource="{Binding ViewModel.ListViewItems, Mode=OneWay}"
@@ -159,7 +159,7 @@
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
-            </ListView>
+            </ui:ListView>
         </Border>
     </Grid>
 </Page>
