--- a/SmartLibrary/Views/Pages/AddBook.xaml
+++ b/SmartLibrary/Views/Pages/AddBook.xaml
@@ -116,7 +116,7 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     FontSize="36"
-                    Text="努力加载中..." />
+                    Text="努力查询中..." />
             </StackPanel>
         </Border>
         <Grid Grid.Row="2" Margin="0,8,0,0">
@@ -146,17 +146,10 @@
                             <ColumnDefinition Width="0.5*" />
                         </Grid.ColumnDefinitions>
                         <Grid Grid.Row="1" Grid.Column="1">
-                            <StackPanel VerticalAlignment="Center">
-                                <ui:ProgressRing
-                                    Margin="0,0,0,8"
-                                    IsIndeterminate="{Binding ViewModel.IsPictureLoading, Mode=OneWay}"
-                                    Visibility="{Binding ViewModel.IsPictureLoading, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
-                                <ui:TextBlock
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    FontSize="18"
-                                    Text="{Binding ViewModel.PictureLoadingText, Mode=OneWay}" />
-                            </StackPanel>
+                            <ui:ProgressRing
+                                Margin="0,0,0,8"
+                                IsIndeterminate="{Binding ViewModel.IsPictureLoading, Mode=OneWay}"
+                                Visibility="{Binding ViewModel.IsPictureLoading, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
                             <ui:Image
                                 HorizontalAlignment="Stretch"
                                 VerticalAlignment="Stretch"
