--- a/SmartLibrary/Views/Pages/Bookshelf.xaml
+++ b/SmartLibrary/Views/Pages/Bookshelf.xaml
@@ -2,6 +2,7 @@
     x:Class="SmartLibrary.Views.Pages.Bookshelf"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:SmartLibrary.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:extensions="clr-namespace:SmartLibrary.Extensions"
     xmlns:local="clr-namespace:SmartLibrary.Views.Pages"
@@ -19,19 +20,28 @@
     ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
 
-    <Grid>
+    <Page.Resources>
+        <converters:BoolToAppearanceConverter x:Key="BoolToAppearanceConverter" />
+    </Page.Resources>
+
+    <Grid Margin="8">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ui:AutoSuggestBox
+        <ui:TextBox
             Grid.Row="0"
-            Margin="8,8,8,0"
-            PlaceholderText="搜索书名，作者等" />
+            Icon="{ui:SymbolIcon Search24}"
+            IconPlacement="Right"
+            IsEnabled="{Binding ViewModel.IsTopbarEnabled, Mode=OneWay}"
+            PlaceholderText="搜索书名，作者、书架号..."
+            PreviewKeyDown="TextBox_PreviewKeyDown"
+            Text="{Binding ViewModel.AutoSuggestBoxText, Mode=TwoWay}" />
         <ItemsControl
             x:Name="BooksList"
             Grid.Row="1"
-            Margin="8,8,8,8"
+            Margin="0,8,0,0"
             d:ItemsSource="{d:SampleData ItemCount=6}"
             ItemsSource="{Binding ViewModel.BookListItems, Mode=OneWay}">
             <ItemsControl.Template>
@@ -65,6 +75,8 @@
                                     Height="173"
                                     extensions:ImageDecoder.Isbn="{Binding Isbn, Mode=OneTime}"
                                     extensions:ImageDecoder.Source="{Binding Picture, Mode=OneTime}"
+                                    BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                                    BorderThickness="0,0,1,0"
                                     CornerRadius="4,0,0,4"
                                     Opacity="0"
                                     RenderOptions.BitmapScalingMode="HighQuality"
@@ -86,7 +98,7 @@
                                         Text="{Binding BookName, Mode=OneTime}"
                                         TextTrimming="CharacterEllipsis" />
                                     <ui:TextBlock
-                                        Margin="0,4,0,0"
+                                        Margin="0,2,0,0"
                                         FontSize="16"
                                         Text="{Binding Author, Mode=OneTime}"
                                         TextTrimming="CharacterEllipsis" />
@@ -127,5 +139,129 @@
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
+        <Grid Grid.Row="2" Margin="8,8,8,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel
+                Grid.Column="0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
+                <ui:TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    Text="共" />
+                <ui:TextBlock
+                    Margin="4,0,4,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    Text="{Binding ViewModel.TotalCount, Mode=OneWay}" />
+                <ui:TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    Text="条" />
+                <ui:TextBlock
+                    Margin="12,0,0,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    Text="每页" />
+                <ComboBox
+                    Height="32"
+                    Margin="4,0,4,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    IsEnabled="{Binding ViewModel.IsBottombarEnabled, Mode=OneWay}"
+                    ItemsSource="{Binding ViewModel.PageCountList, Mode=OneTime}"
+                    SelectedIndex="{Binding ViewModel.CurrentIndex, Mode=TwoWay}" />
+                <ui:TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    Text="条" />
+            </StackPanel>
+            <StackPanel
+                Grid.Column="1"
+                Margin="8,0,8,0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                IsEnabled="{Binding ViewModel.IsBottombarEnabled, Mode=OneWay}"
+                Orientation="Horizontal">
+                <ui:Button
+                    Margin="4,0,12,0"
+                    Command="{Binding ViewModel.PageButtonClickCommand, Mode=OneWay}"
+                    CommandParameter="PageUp"
+                    Icon="{ui:SymbolIcon ChevronLeft24}"
+                    IsEnabled="{Binding ViewModel.IsPageUpEnabled, Mode=OneWay}"
+                    ToolTip="上一页" />
+                <ItemsControl ItemsSource="{Binding ViewModel.PageButtonList, Mode=OneWay}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <ui:Button
+                                Margin="4,0,0,0"
+                                Appearance="{Binding IsCurrentPage, Converter={StaticResource BoolToAppearanceConverter}}"
+                                Command="{Binding ElementName=DataGrid, Path=DataContext.ViewModel.GotoPageCommand, Mode=OneWay}"
+                                CommandParameter="{Binding Name, Mode=OneWay}"
+                                Content="{Binding Name, Mode=OneWay}"
+                                IsEnabled="{Binding IsEnabled, Mode=OneWay}" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+                <ui:Button
+                    Margin="16,0,0,0"
+                    Command="{Binding ViewModel.PageButtonClickCommand, Mode=OneWay}"
+                    CommandParameter="PageDown"
+                    Icon="{ui:SymbolIcon ChevronRight24}"
+                    IsEnabled="{Binding ViewModel.IsPageDownEnabled, Mode=OneWay}"
+                    ToolTip="下一页" />
+            </StackPanel>
+            <StackPanel
+                Grid.Column="2"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
+                <TextBox Name="XuNiBox" Width="0" />
+                <ui:Flyout
+                    VerticalAlignment="Center"
+                    IsOpen="{Binding ViewModel.IsFlyoutOpen, Mode=TwoWay}"
+                    Placement="Top">
+                    <TextBlock
+                        Width="200"
+                        HorizontalAlignment="Center"
+                        FontSize="18"
+                        Text="{Binding ViewModel.FlyoutText, Mode=OneWay}"
+                        TextWrapping="WrapWithOverflow" />
+                </ui:Flyout>
+                <ui:TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    Text="前往" />
+                <ui:TextBox
+                    x:Name="textBox"
+                    Height="32"
+                    Margin="4,0,4,0"
+                    extensions:TextBoxAttachedProperties.IsOnlyNumber="True"
+                    IsEnabled="{Binding ViewModel.IsBottombarEnabled, Mode=OneWay}"
+                    PreviewKeyDown="TextBox_PreviewKeyDown"
+                    Text="{Binding ViewModel.TargetPage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <ui:TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    Text="页" />
+            </StackPanel>
+        </Grid>
     </Grid>
 </Page>
