--- a/SmartLibrary/Views/Pages/Borrow_Return_Book.xaml
+++ b/SmartLibrary/Views/Pages/Borrow_Return_Book.xaml
@@ -25,7 +25,6 @@
         <converters:BoolToBorrowOrReturnTextConverter x:Key="BoolToBorrowOrReturnTextConverter" />
         <converters:BoolToPlaceholderTextConverter x:Key="BoolToPlaceholderTextConverter" />
     </Page.Resources>
-
     <Grid Margin="16">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -36,6 +35,8 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <ui:Button
                 Grid.Column="0"
@@ -45,15 +46,33 @@
                 Command="{Binding ViewModel.ScanButtonClickCommand, Mode=OneWay}"
                 Content="扫描"
                 FontSize="24"
-                Visibility="{Binding ViewModel.IsScanButtonEnabled, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                IsEnabled="{Binding ViewModel.IsScanButtonEnabled, Mode=OneWay}"
+                Visibility="{Binding ViewModel.IsScanButtonVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}" />
             <ui:TextBox
+                Name="IsbnBox"
                 Grid.Column="1"
                 extensions:TextBoxAttachedProperties.IsOnlyNumber="True"
-                FontSize="24"
+                FontSize="20"
                 MaxLength="13"
                 PlaceholderText="{Binding ViewModel.IsScanButtonEnabled, Converter={StaticResource BoolToPlaceholderTextConverter}, Mode=OneWay}"
                 PreviewKeyDown="IsbnBox_PreviewKeyDown"
-                Text="{Binding ViewModel.IsbnText, Mode=TwoWay}" />
+                Text="{Binding ViewModel.IsbnText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <ui:Image
+                Grid.Column="2"
+                Width="40"
+                Height="40"
+                Margin="6,0,0,0"
+                RenderOptions.BitmapScalingMode="HighQuality"
+                Source="{Binding ViewModel.IsbnAttitudeImage, Mode=OneWay}"
+                Visibility="{Binding ViewModel.IsbnAttitudeVisible, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
+            <ui:Button
+                Grid.Column="3"
+                MinWidth="130"
+                Margin="8,0,0,0"
+                Command="{Binding ViewModel.SearchButtonClickCommand, Mode=OneWay}"
+                Content="查询(Enter)"
+                FontSize="24"
+                IsEnabled="{Binding ViewModel.IsSearchButtonEnabled, Mode=OneWay}" />
         </Grid>
         <Grid Grid.Row="1" Margin="0,8,0,0">
             <Grid.ColumnDefinitions>
