--- a/SmartLibrary/Views/Pages/BookInfo.xaml
+++ b/SmartLibrary/Views/Pages/BookInfo.xaml
@@ -22,6 +22,7 @@
     <Page.Resources>
         <Style BasedOn="{StaticResource MyButtonStyle}" TargetType="ui:Button" />
         <converters:BoolToImageSourceConverter x:Key="BoolToImageSourceConverter" />
+        <converters:BoolToPlaceholderTextConverter x:Key="BoolToPlaceholderTextConverter" />
     </Page.Resources>
 
     <Grid Margin="16">
@@ -30,11 +31,49 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <TextBox Name="XuNiBox" Width="0" />
-        <ui:TextBox
-            Grid.Row="0"
-            FontSize="24"
-            IsReadOnly="True"
-            Text="{Binding ViewModel.IsbnText, Mode=OneWay}" />
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <ui:Button
+                Grid.Column="0"
+                MinWidth="130"
+                Margin="0,0,8,0"
+                Appearance="Primary"
+                Command="{Binding ViewModel.ScanButtonClickCommand, Mode=OneWay}"
+                Content="扫描"
+                FontSize="24"
+                IsEnabled="{Binding ViewModel.IsScanButtonEnabled, Mode=OneWay}"
+                Visibility="{Binding ViewModel.IsScanButtonVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}" />
+            <ui:TextBox
+                Name="IsbnBox"
+                Grid.Column="1"
+                extensions:TextBoxAttachedProperties.IsOnlyNumber="True"
+                FontSize="20"
+                MaxLength="13"
+                PlaceholderText="{Binding ViewModel.IsScanButtonVisible, Converter={StaticResource BoolToPlaceholderTextConverter}, Mode=OneWay}"
+                PreviewKeyDown="IsbnBox_PreviewKeyDown"
+                Text="{Binding ViewModel.IsbnText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <ui:Image
+                Grid.Column="2"
+                Width="40"
+                Height="40"
+                Margin="6,0,0,0"
+                RenderOptions.BitmapScalingMode="HighQuality"
+                Source="{Binding ViewModel.IsbnAttitudeImage, Mode=OneWay}"
+                Visibility="{Binding ViewModel.IsbnAttitudeVisible, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
+            <ui:Button
+                Grid.Column="3"
+                MinWidth="130"
+                Margin="8,0,0,0"
+                Command="{Binding ViewModel.SearchButtonClickCommand, Mode=OneWay}"
+                Content="查询(Enter)"
+                FontSize="24"
+                IsEnabled="{Binding ViewModel.IsSearchButtonEnabled, Mode=OneWay}" />
+        </Grid>
         <Grid Grid.Row="1" Margin="0,8,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.5*" />
